--- a/link/cod.html
+++ b/link/cod.html
@@ -11,7 +11,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- <link href="bootstrap.min.css" rel="stylesheet"> -->
 
-    <link rel="stylesheet" href="../c.css">
+    <link rel="stylesheet" href="../style.css">
 
  
 
@@ -26,9 +26,9 @@
 
         <div class="mynav">
             <ul class="ul">
-                    <li>
-                            <a id="aaa" href="../index.html">首頁</a>   
-                          </li>
+                <li>
+                    <a class="homepage" href="../index.html">首頁</a>   
+                </li>
                 <li>線上遊戲</li>
                 <li>PC GAME</li>
                 <li>PS4</li>
